add smokeping and system scripts.

--- a/mysql/A-MySQLNotes/权限管理.md
+++ b/mysql/A-MySQLNotes/权限管理.md
@@ -33,3 +33,6 @@ localhost|localhost不会被解析成IP地址，直接通过UNIXsocket连接
 操作 MySQL 存储过程、函数 权限|grant create routine on testdb.* to developer@’192.168.0.%’;<br>grant alter routine on testdb.* to developer@’192.168.0.%’;<br>grant execute on testdb.* to developer@’192.168.0.%’;
 普通DBA管理某个MySQL数据库的权限|grant all privileges on testdb to dba@’localhost’
 高级DBA管理MySQL中所有数据库的权限|grant all on *.* to dba@’localhost’
+
+
+GRANT ALL PRIVILEGES ON *.* TO zhangsan@"%" IDENTIFIED BY "lisi"; 
