--- a/mysql/A-MySQLNotes/用户管理.md
+++ b/mysql/A-MySQLNotes/用户管理.md
@@ -41,6 +41,8 @@ REVOKE SELECT ON crashcourse.* FROM test;
 ```
 GRANT SELECT,UPDATE,DELETE,INSERT ON crashcourse.* TO test;
 REVOKE SELECT,UPDATE,DELETE,INSERT ON crashcourse.* TO test;
+GRANT ALL PRIVILEGES ON *.* TO zhangsan@"%" IDENTIFIED BY "lisi"; 
+grant all privileges on *.* to 'root'@'%' identified by 'root' with grant option;
 ```
 * 命令更新
 ```
